--- a/WebActivatorTest/WebActivatorTest.csproj
+++ b/WebActivatorTest/WebActivatorTest.csproj
@@ -51,17 +51,9 @@
     <Compile Include="WebActivatorUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TestLibrary2\TestLibrary2.csproj">
-      <Project>{638765A7-E010-495F-B325-821D735B2121}</Project>
-      <Name>TestLibrary2</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TestLibrary\TestLibrary.csproj">
-      <Project>{3D5B026A-2E5F-4C03-8F70-945517215017}</Project>
-      <Name>TestLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WebActivator\WebActivator.csproj">
+    <ProjectReference Include="..\WebActivator\AppActivator.csproj">
       <Project>{339C42C9-C961-4E37-B64E-16F1EF03E4D9}</Project>
-      <Name>WebActivator</Name>
+      <Name>AppActivator</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
